<resources>
    <string name="app_name">Pratama Laundry Admin</string>
    <string name="failed_login">Login Gagal</string>
    <string name="not_found">Username atau Passowrd Tidak ditemukan\n</string>
    <string name="empty_username">Username Kosong</string>
    <string name="empty_pass">Password Kosong</string>
    <string name="img">ini gambar\n</string>
    <string name="loading">Loading</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="service">Produk</string>
    <string name="username">nama akun</string>
    <string name="welcome">Selamat Datang</string>
    <string name="transaction">Transaksi</string>
    <string name="number">1</string>
    <string name="product_name">nama produk</string>
    <string name="rupiah">Rp</string>
    <string name="harga">harga</string>
    <string name="list_menu_service">Daftar Layanan</string>
    <string name="submit">tambah\n</string>
    <string name="add_product">Tambah Produk</string>
    <string name="change_password">Ganti Password</string>
    <string name="profile">Profile</string>
    <string name="name">Nama</string>
    <string name="no_telp">No Hp</string>
    <string name="address">Alamat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="txtUsername">Username</string>
    <string name="history">Riwayat Transaksi Pelanggan</string>
    <string name="status_bayar">Status Bayar</string>
    <string name="status_barang">Status Barang</string>
    <string name="encryp">*****************</string>
    <string name="notifications">Ada Transaksi baru nih!</string>
    <string name="rekap_transaksi">Rekap Transaksi</string>

    <string-array name="status_bayar">
        <item>Belum Lunas</item>
        <item>Lunas</item>
    </string-array>

    <string-array name="status_barang">
        <item>Menunggu Konfirmasi</item>
        <item>Sedang Di Proses</item>
        <item>Selesai</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">Aturan</string>
    <string name="description_rules">Pada Pratama Laudry, kami memiliki beberapa aturan yang harus dipatuhi oleh pelanggan. Aturan tersebut adalah sebagai berikut :</string>
    <string name="rules_asosiasi">Aturan Asosiasi Laundry Indonesia</string>
    <string name="rules_komplain">Aturan Layanan Komplain</string>

    <string name="product_category">Kategori Produk</string>
    <string name="default_notification_channel_description">Ada pesanan baru yang harus anda konfirmasi.</string>
</resources>